Implementacion del notebook y el template

--- a/Primer_Proyecto/proyecto01.ipynb
+++ b/Primer_Proyecto/proyecto01.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "d702426e",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "3d10195e",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mi primer proyecto con Python\n",
+      "Proyecto\n",
       "120\n",
       "90\n",
       "2 meses\n"
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "789a48e8",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "ccc0cb7a",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "10800"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "33457672",
    "metadata": {},
    "outputs": [
@@ -239,19 +239,7 @@
      "output_type": "stream",
      "text": [
       "Collecting fpdf\n",
-      "  Downloading fpdf-1.7.2.tar.gz (39 kB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
-      "Building wheels for collected packages: fpdf\n",
-      "  Building wheel for fpdf (pyproject.toml): started\n",
-      "  Building wheel for fpdf (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for fpdf: filename=fpdf-1.7.2-py2.py3-none-any.whl size=40771 sha256=f3bf0ee984458a69da83c687ce2858d79add683f92ba5129a9bfa8f569252b43\n",
-      "  Stored in directory: c:\\users\\camilo\\appdata\\local\\pip\\cache\\wheels\\44\\35\\8b\\86ce00cec7e4d13c5f189680ae0fa82f919bedc066c2cddae9\n",
-      "Successfully built fpdf\n",
+      "  Using cached fpdf-1.7.2-py2.py3-none-any.whl\n",
       "Installing collected packages: fpdf\n",
       "Successfully installed fpdf-1.7.2\n"
      ]
@@ -263,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "66e198e5",
    "metadata": {},
    "outputs": [],
@@ -273,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "769901aa",
    "metadata": {},
    "outputs": [
@@ -290,7 +278,7 @@
     "pdf.add_page()\n",
     "pdf.set_font(\"Arial\")\n",
     "\n",
-    "#pdf.image(\"template.png\", 0, 0)\n",
+    "pdf.image(\"template.png\", 0, 0)\n",
     "\n",
     "pdf.text(115, 145, proyecto)\n",
     "pdf.text(115, 160, horas_estimadas)\n",
